--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "moon",
-  "description": "Lunar and solar calendar web app",
-  "version": "1.0.0",
+  "name": "moon_v2",
+  "description": "Lunar and solar calendar web app made with custom elements",
+  "version": "2.0.0",
   "license": "UNLICENSED",
-  "repository": "https://github.com/bgauslin/moon",
+  "repository": "https://github.com/bgauslin/moon_v2",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "postcss": {
     "plugins": {
-      "autoprefixer": {}
+      "autoprefixer": {},
+      "cssnano": {}
     }
   },
   "browserslist": [
@@ -33,6 +34,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
+    "cssnano": "^4.1.10",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^4.0.0",
