--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moon_v2",
-  "description": "Lunar and solar calendar web app made with custom elements",
+  "description": "Location-based moon phase, moonrise, moonset, sunrise, and sunset times via custom elements",
   "version": "2.0.0",
   "license": "UNLICENSED",
   "repository": "https://github.com/bgauslin/moon_v2",
