--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   ],
   "dependencies": {
     "@types/fastclick": "^1.0.28",
+    "@types/suncalc": "^1.8.0",
     "fastclick": "^1.0.6",
-    "spin": "^0.0.1"
+    "spin": "^0.0.1",
+    "suncalc": "^1.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
