--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "@types/fastclick": "^1.0.28",
+    "@types/spin": "^2.3.30",
     "@types/suncalc": "^1.8.0",
     "fastclick": "^1.0.6",
     "spin": "^0.0.1",
