--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/spin": "^2.3.30",
     "@types/suncalc": "^1.8.0",
     "fastclick": "^1.0.6",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0",
     "spin": "^0.0.1",
     "suncalc": "^1.8.0",
     "tz-lookup": "^6.1.24"
@@ -47,8 +49,6 @@
     "http-server": "^0.11.1",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
-    "pug-html-loader": "^1.1.5",
-    "raw-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
