--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "node",
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "target": "es6",
+    "target": "es6"
   },
   "include": [
     "global.d.ts"
