--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "tz-lookup": "^6.1.24"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
     "@types/tz-lookup": "^6.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -31,7 +30,6 @@
     "webpack": "^5.76.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0",
-    "workbox-webpack-plugin": "^4.3.1"
+    "webpack-merge": "^5.8.0"
   }
 }
