--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/suncalc": "^1.8.0",
+    "lit": "^3.1.2",
     "suncalc": "^1.8.0",
     "tz-lookup": "^6.1.24"
   },
