--- a/package.json
+++ b/package.json
@@ -11,25 +11,23 @@
   "dependencies": {
     "@types/suncalc": "^1.8.0",
     "@types/tz-lookup": "^6.1.2",
-    "lit": "^3.1.2",
-    "suncalc": "^1.8.0",
-    "tz-lookup": "^6.1.24"
-  },
-  "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "lit": "^3.1.2",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.17",
     "postcss-loader": "^7.0.1",
     "sass": "^1.86.3",
     "sass-loader": "^13.0.2",
+    "suncalc": "^1.8.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
+    "tz-lookup": "^6.1.24",
     "webpack": "^5.76.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1",
     "webpack-font-preload-plugin": "^1.5.0",
     "webpack-merge": "^5.8.0"
