--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "moon",
   "description": "Location-based moon phase, moonrise, moonset, sunrise, and sunset times via custom elements",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "license": "UNLICENSED",
   "repository": "https://github.com/bgauslin/moon",
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
