--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "lit": "^3.1.2",
+    "suncalc": "^1.8.0",
+    "tz-lookup": "^6.1.24"
+  },
+  "devDependencies": {
     "@types/suncalc": "^1.8.0",
     "@types/tz-lookup": "^6.1.2",
     "clean-webpack-plugin": "^4.0.0",
@@ -16,14 +21,11 @@
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "lit": "^3.1.2",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.86.3",
     "sass-loader": "^13.0.2",
-    "suncalc": "^1.8.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
-    "tz-lookup": "^6.1.24",
     "webpack": "^5.76.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1",
